--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ p {
     background-color: white;
     margin: 10px;
     border: 2px solid #a8a8a8;
-    padding: 10px 30px;
+    padding: 10px;
 }
 
 .city-div {
