--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,17 @@ p {
 
 }
 
+#cityName {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bolder;
+}
+
+#temp {
+    text-align: center;
+    font-size: 20px; 
+}
+
 #container {
     margin-top: 2%;
     margin-left: 20%;
@@ -45,7 +56,7 @@ p {
     background-color: white;
     margin: 10px;
     border: 2px solid #a8a8a8;
-    padding: 10px;
+    padding: 30px;
 }
 
 .city-div {
@@ -58,6 +69,18 @@ p {
 
 .recipe-div {
     height: 500px;
+}
+
+#img {
+    height: 50px;
+}
+
+a {
+    color: rgb(130,216,202);
+}
+
+button {
+    color: rgb(130,216,202);
 }
 
 footer {
