--- a/styles.css
+++ b/styles.css
@@ -37,13 +37,15 @@ p {
 
 #cityName {
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bolder;
+    width: 100%;
+    text-align: center;
 }
 
 #temp {
     text-align: center;
-    font-size: 20px; 
+    font-size: 15px; 
 }
 
 #container {
@@ -63,14 +65,6 @@ p {
     margin-left: 10px;
 }
 
-.weather-div {
-    height: 200px;
-}
-
-.recipe-div {
-    height: 500px;
-}
-
 #img {
     height: 50px;
 }
@@ -81,6 +75,10 @@ a {
 
 button {
     color: rgb(130,216,202);
+}
+
+.divider {
+    margin-bottom: 15px;
 }
 
 footer {
