--- a/styles.css
+++ b/styles.css
@@ -38,14 +38,23 @@ p {
 #cityName {
     text-align: center;
     font-size: 20px;
-    font-weight: bolder;
+    /* font-weight: bolder; */
     width: 100%;
     text-align: center;
 }
 
+#cityDate {
+    text-align: center;
+    font-size: 15px;
+    width: 100%;
+    text-align: center;
+    
+}
+
 #temp {
     text-align: center;
-    font-size: 15px; 
+    font-size: 40px; 
+    font-weight: bolder;
 }
 
 #container {
@@ -56,13 +65,25 @@ p {
 
 #item-div {
     background-color: white;
-    margin: 10px;
+    /* margin: 10px; */
     border: 2px solid #a8a8a8;
     padding: 30px;
+    border-radius: 5px;
+    opacity: 0.8;
 }
 
 .city-div {
     margin-left: 10px;
+}
+
+.recipe-div {
+    margin-right:10px;
+
+}
+
+.weather-div {
+    margin-bottom: 20px;
+    height: 35%;
 }
 
 #img {
@@ -95,6 +116,13 @@ button {
 #recipelink, #youtubelink {
     color:white;
 }
+@media (min-width: 768px) {
+    #flexbox-center {
+        position: relative;
+        left: 4%;
+    }
+}
+
 
 footer {
     background: rgb(130,216,202);
