--- a/styles.css
+++ b/styles.css
@@ -64,14 +64,13 @@ p {
 }
 
 #item-div {
-    background-color: white;
-    /* margin: 10px; */
+    background-color: rgba(255, 255, 255, 0.85);
+    margin-left: 5px;
+    margin-right: 5px;
     border: 2px solid #a8a8a8;
     padding: 30px;
-    border-radius: 5px;
-    opacity: 0.8;
+    border-radius: 10px;
 }
-
 .city-div {
     margin-left: 10px;
 }
@@ -92,6 +91,7 @@ p {
 
 a {
     color:white;
+    opacity: 0;
 }
 
 button {
@@ -113,13 +113,22 @@ button {
     padding: 5px;
 }
 
+.card-image {
+    z-index: inherit 2;
+    opacity: 1;
+}
+
 #recipelink, #youtubelink {
     color:white;
 }
 @media (min-width: 768px) {
     #flexbox-center {
         position: relative;
-        left: 4%;
+        left: 3.5%;
+    }
+
+    #recipe-div {
+        margin-left:5px;
     }
 }
 
